Left pading added to project title to fix alignment issues

--- a/components/ProjectForum/styles.module.scss
+++ b/components/ProjectForum/styles.module.scss
@@ -41,11 +41,16 @@
     padding-left: 10px;
 }
 
+.projectTitle {
+    padding-left: 10px;
+}
+
 .projectIdea {
-    margin-top: 20px;
-    padding: 10px 10px;
+    margin-top: 10px;
+    padding: 10px 0px;
     background-color: $default-grey;
     color: white;
     border-radius: 8px;
     font-size: small;
 }
+
